--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-tqdm>=4.66.0
+numpy==1.26.4
+pandas==2.2.1
+scikit-learn==1.3.2
+scikit-optimize==0.9.0 
+joblib==1.3.2
+rich==13.9.4
+python-dateutil==2.9.0
+PyYAML==6.0.1
+pyarrow==15.0.2
