--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,51 @@
+aiodns==3.2.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+async-timeout==5.0.1
+attrs==25.1.0
+ccxt==4.2.85
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+contourpy==1.3.0
+cryptography==44.0.1
+cycler==0.12.1
+fonttools==4.56.0
+frozenlist==1.5.0
+idna==3.10
+importlib_resources==6.5.2
+joblib==1.4.2
+kiwisolver==1.4.7
+markdown-it-py==3.0.0
+matplotlib==3.8.3
+mdurl==0.1.2
+multidict==6.1.0
+narwhals==1.28.0
 numpy==1.26.4
+packaging==24.2
 pandas==2.2.1
-scikit-learn==1.3.2
-scikit-optimize==0.9.0 
-joblib==1.3.2
-rich==13.9.4
+pillow==11.1.0
+plotly==6.0.0
+propcache==0.2.1
+pyaml==25.1.0
+pycares==4.5.0
+pycparser==2.22
+Pygments==2.19.1
+pyparsing==3.2.1
 python-dateutil==2.9.0
-PyYAML==6.0.1
-pyarrow==15.0.2
+pytz==2024.1
+PyYAML==6.0.2
+requests==2.31.0
+rich==13.9.4
+scikit-learn==1.3.2
+scikit-optimize==0.9.0
+scipy==1.13.1
+six==1.17.0
+threadpoolctl==3.5.0
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+yarl==1.18.3
+zipp==3.21.0
