--- a/ds_fee/configs/base_config.yaml
+++ b/ds_fee/configs/base_config.yaml
@@ -12,9 +12,31 @@ fees:
     taker: 0.001   # 吃单手续费率 0.1%
   future:  # 合约交易手续费
     maker: 0.0002  # 挂单开仓手续费率 0.02%
-    taker: 0.0004  # 吃单平仓手续费率 0.05%
+    taker: 0.0005  # 吃单平仓手续费率 0.05%
 
 # 以下参数将由引擎自动设置
 # backtest时间范围根据实际数据自动确定 
 # fee_rate使用实际资金费率
 # 策略参数通过优化器动态优化
+
+# 优化器配置
+optimizer:
+  # 风控指标阈值
+  risk_params:
+    min_annual_return: 0.03   # 最低年化收益3%
+    max_drawdown: 0.30        # 允许最大回撤30%
+    min_sharpe: 0.8           # 夏普比率≥0.8
+    min_win_rate: 0.30        # 胜率≥30%
+  
+  # 评估指标权重
+  funding_weight: 1.2       # 资金费收益权重
+  
+  # 参数优化范围
+  param_ranges:
+    spread_threshold: [0.002, 0.008, 0.0005]  # 价差范围0.2%-0.8%
+    leverage: [2, 3, 4, 5]                    # 杠杆倍数选项
+    max_hold_seconds: [7200, 14400, 28800]    # 持仓时间2-8小时
+    min_funding_rate: [0.0002, 0.001, 0.0001] # 资金费率范围
+    risk_per_trade: [0.01, 0.05, 0.005]       # 风险比例范围
+    take_profit: [0.006, 0.02, 0.002]         # 止盈范围
+    stop_loss: [0.004, 0.012, 0.001]          # 止损范围
